hphp/test/zend/good/Zend/tests/ns_072.php.expectf
object(foo\test) (0) {
}
NULL

Catchable fatal error: Argument 1 passed to foo\bar::__construct() must implement interface foo\foo, stdClass given in %s/ns_072.php on line 22
